# CashRegisterSimulator

./: Bill.cpp  Bill.h  DailyRaport.cpp  DailyRaport.h  Main.cpp  MainMenu.cpp  MainMenu.h  MainMenuPrinter.cpp  MainMenuPrinter.h  Product.h  ProductListManager.cpp  ProductListManager.h  ProductManagementMenu.cpp  Sale.cpp  Sprzedaz.cpp  Sprzedaz.h  SprzedazMenu.cpp  SprzedazMenu.h  SprzedazMenuPrinter.cpp  SprzedazMenuPrinter.h  TakeFromUserData.h  TakeTime.cpp  productsList.txt
SklepGui/: CMakeLists.txt  Main .cpp  Main.cpp
SklepGui/EXE/: CMakeLists (1).txt  CMakeLists.txt  EXE.cpp  EXE.h
SklepGui/core/: Bill.cpp  Bill.h  DailyRaport.cpp  DailyRaport.h  Display.h  MainMenu.cpp  MainMenu.h  MainMenuPrinter.cpp  Product.cpp  Product.h  ProductListManager.cpp  ProductListManager.h  Sale.h  TakeFromUserData.h  TaxesCounter.h
SklepGui/gui/: Product.ui  addProductToBilll.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
SklepGuiV2/: CMakeLists (1).txt  CMakeSettings.json  Main.cpp
SklepGuiV2/ (1).git/: config (1)
SklepGuiV2/EXE/: EXE (1).cpp
SklepGuiV2/EXE (1)/: EXE (1).h
SklepGuiV2/core/: Bill (1).cpp  Product.cpp  Product.h  TakeTime.cpp  vatTax.cpp
SklepGuiV2/core (1)/: Bill (1).h  TakeTime (1).h  vatTax (1).h
SklepGuiV2/gui/: mainwindow.cpp  mainwindow.h
SklepGuiV2/gui (1)/: mainwindow (1).ui
SklepTui/: MainMenu.cpp  MainMenuPrinter.h  Product.cpp  ProductListManager.h  ProductManagementMenu.h  Sprzedaz.h  SprzedazMenu.cpp  SprzedazMenu.h  TakeFromUserData.h  TakeTime.h
doc/: Raport_Końcowy.docx  sklep.docx
